@@ -437,6 +437,101 @@ button
             text-align: left;
         }
 
+#mini-timeline-container
+        {
+            position:relative;
+            height:50px;
+            top:10px;
+        }
+
+        #mini-timeline-label-start
+        {
+            position:absolute;
+            width:28px;
+            height:26px;
+            left:8px;
+            top:-26px;
+            font-size:10px;
+            color:#fff;
+            text-align:center;
+        }
+
+        #mini-timeline-label-end
+        {
+            position:absolute;
+            width:28px;
+            height:26px;
+            right:7px;
+            top:-26px;
+            font-size:10px;
+            color:#fff;
+            text-align:center;
+        }
+
+        #mini-timeline-label-today
+        {
+            position:absolute;
+            width:28px;
+            height:14px;
+            top:24px;
+            font-size:10px;
+            color:rgb(0,255,0);
+            text-align:center;
+        }
+
+        #mini-timeline-marker-start
+        {
+            position:absolute;
+            width:2px;
+            height:20px;
+            background-color:#fff;
+            display:inline-block;
+            left:20px;
+        }
+
+        #mini-timeline-marker-middle
+        {
+            position:absolute;
+            width:356px;
+            height:2px;
+            background-color:#fff;
+            display:inline-block;
+            left:22px;
+            top:9px;
+        }
+
+        #mini-timeline-marker-end
+        {
+            position:absolute;
+            width:2px;
+            height:20px;
+            background-color:#fff;
+            display:inline-block;
+            right:20px;
+        }
+
+        #mini-timeline-marker-today
+        {
+            position:absolute;
+            width:2px;
+            height:24px;
+            background-color:rgb(0,255,0);
+            display:inline-block;
+        }
+
+.mini-timeline-phase
+{
+    position:absolute !important;
+    height: 10px !important;
+    top:5px !important;
+}
+
+        
+
+
+
+
+
 
 
 
@@ -764,6 +859,7 @@ button
 .details-item-phase.distribution {
     color: rgba(104,196,119,0.85);
 }
+
 
 
 
